resume updated, fixed contact page font size on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,11 @@ mark{
     color: black;
     text-decoration: none !important;
 }
+
+/*adjustments for smaller screens*/
+@media (max-width: 550px){
+
+    h4{
+        font-size: 25px !important;
+    }
+}
